--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -19,6 +19,28 @@ a
   color: black;
 }
 /* |||||||||| INIZIO |||||||||| */
+.containerAreaGioco
+{
+  margin: 0 auto;
+  width: 40%;
+}
+
+.gridBox
+{
+  width: calc(100% / 10);
+  aspect-ratio: 1/1;
+  border: 1px solid black;
+  background-color: lightgrey;
+}
+
+.active
+{
+  background-color: lightblue;
+}
+
+
+
+
 
 
 /* |||||||||| HEADER |||||||||| */
