HTML/CSS: Fix btn

--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -19,17 +19,28 @@ a
   color: black;
 }
 /* |||||||||| INIZIO |||||||||| */
-.containerAreaGioco
+
+body
 {
-  margin: 0 auto;
-  width: 35%;
+  /* background-image: url('../img/bg-bomb.png');
+  background-size: 2%; */
+  background-color: rgb(193, 193, 193);
 }
 
-.gridBox
+/* |||||||||| HEADER |||||||||| */
+header
 {
-  aspect-ratio: 1/1;
-  border: 1px solid black;
-  background-color: lightgrey;
+  height: 10vh;
+}
+.btnHeight
+{
+  height: 6vh;
+}
+
+/* |||||||||| MAIN |||||||||| */
+main
+{
+  height: 85vh;
 }
 
 /*larghezza per 100 quadrati*/
@@ -53,35 +64,18 @@ a
   background-color: lightblue;
 }
 
-body
+.containerAreaGioco
 {
-  /* background-image: url('../img/bg-bomb.png');
-  background-size: 2%; */
-  background-color: rgb(193, 193, 193);
+  margin: 0 auto;
+  width: 35%;
 }
 
-
-
-
-
-/* |||||||||| HEADER |||||||||| */
-header
+.gridBox
 {
-  height: 10vh;
+  aspect-ratio: 1/1;
+  border: 1px solid black;
+  background-color: lightgrey;
 }
-
-
-/* |||||||||| NAV |||||||||| */
-
-
-
-/* |||||||||| MAIN |||||||||| */
-main
-{
-  height: 85vh;
-}
-
-
 /* |||||||||| FOOTER |||||||||| */
 footer
 {
